@@ -10,49 +10,44 @@ Author: WPMU DEV
 
 class App_Export_DateRange {
 
-	private function __construct () {}
+	private function __construct() {}
 
-	public static function serve () {
+	public static function serve() {
 		$me = new App_Export_DateRange;
 		$me->_add_hooks();
 	}
 
-	private function _add_hooks () {
-		add_action('app-export-export_form_end', array($this, 'inject_range_form'));
-		add_filter('app-export-appointment', array($this, 'check_appointment_for_inclusion'), 10, 2);
+	private function _add_hooks() {
+		add_action( 'app-export-export_form_end', array( $this, 'inject_range_form' ) );
+		add_filter( 'app-export-appointment', array( $this, 'check_appointment_for_inclusion' ), 10, 2 );
 	}
 
-	public function check_appointment_for_inclusion ($src, $app) {
-		if (empty($_POST['app-export-start']) && empty($_POST['app-export-end'])) return $src; // Not applicable
-		if (empty($src) || empty($app->start)) return $src;
-
+	public function check_appointment_for_inclusion( $src, $app ) {
+		if ( empty( $_POST['app-export-start'] ) && empty( $_POST['app-export-end'] ) ) { return $src; // Not applicable
+		}		if ( empty( $src ) || empty( $app->start ) ) { return $src; }
 		$wp_date_format = get_option( 'date_format' );
 		$wp_time_format = get_option( 'time_format' );
-
-		$app_start = DateTime::createFromFormat($wp_date_format . ' ' . $wp_time_format, $app->start);
-		$app_end = DateTime::createFromFormat($wp_date_format . ' ' . $wp_time_format, $app->end);
-				
+		$app_start = DateTime::createFromFormat( $wp_date_format . ' ' . $wp_time_format, $app->start );
+		$app_end = DateTime::createFromFormat( $wp_date_format . ' ' . $wp_time_format, $app->end );
 		$start = strtotime( $app_start->format( 'Y-m-d H:i:s' ) );
 		$end = strtotime( $app_end->format( 'Y-m-d H:i:s' ) );
-		
-		$earliest = !empty($_POST['app-export-start'])
-			? strtotime($_POST['app-export-start'])
+		$earliest = ! empty( $_POST['app-export-start'] )
+			? strtotime( $_POST['app-export-start'].' 00:00:00' ) - 1
 			: 0
 		;
-		$latest = !empty($_POST['app-export-end'])
-			? strtotime($_POST['app-export-end'])
-			: time()
-		;
+		$latest = ! empty( $_POST['app-export-end'] )
+			? strtotime( $_POST['app-export-end'].' 00:00:00' ) + DAY_IN_SECONDS
+			: time();
 		return $start < $latest && $end > $earliest
 			? $src
 			: false
 		;
 	}
 
-	public function inject_range_form () {
-		$title = __('Only include appointments between', 'appointments');
-		$start = __('Start', 'appointments');
-		$end = __('End', 'appointments');
+	public function inject_range_form() {
+		$title = __( 'Only include appointments between', 'appointments' );
+		$start = __( 'Start', 'appointments' );
+		$end = __( 'End', 'appointments' );
 		?>
 <label for="app-export-date_range-toggle">
 	<input type="checkbox" id="app-export-date_range-toggle" autocomplete="off" />
@@ -101,4 +96,4 @@ class App_Export_DateRange {
 		<?php
 	}
 }
-if (is_admin()) App_Export_DateRange::serve();
+if ( is_admin() ) { App_Export_DateRange::serve(); }
