@@ -1,6 +1,7 @@
 2018-xx-xx - 2.2.7
 -------------------------------
 - Changed default appointments sorting to "Appointment Date".
+- Fixed export problem for date range.
 
 2018-xx-xx - 2.2.6
 -------------------------------
